--- a/src/main/resources/templates/userAccount.html
+++ b/src/main/resources/templates/userAccount.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>My account</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         /* Стилі для верхнього банера */
         .header {
@@ -47,10 +48,16 @@
         </div>
 
         <!-- Баланс користувача -->
-        <div class="user-info-row d-flex justify-content-between">
-            <strong> <i style="color: forestgreen" class="fa fa-money" aria-hidden="true"></i> Balance:</strong> <span th:text="${user.balance}">0.00</span>
-            <!-- Кнопка для поповнення балансу -->
-            <a th:href="@{/user/top-up}" class="btn btn-primary">Top Up</a>
+        <div class="user-info-row">
+            <div class="d-flex justify-content-between">
+                <!-- Ліва частина: баланс користувача -->
+                <div>
+                    <strong><i style="color: forestgreen;" class="fa fa-money" aria-hidden="true"></i> Balance:</strong>
+                    <span th:text="${user.balance}">0.00</span>₴
+                </div>
+                <!-- Права частина: кнопка поповнення балансу -->
+                <a  type="button" class="btn btn-success" data-toggle="modal" data-target="#topUpModal">Top Up</a>
+            </div>
         </div>
 
         <!-- Роль користувача -->
@@ -60,12 +67,38 @@
 
         <!-- Ігри користувача -->
         <div class="user-info-row">
-            <strong> <i class="fa fa-gamepad" aria-hidden="true"></i> Games:</strong>
+            <strong> <i class="fa fa-gamepad" aria-hidden="true"></i> My games:</strong>
             <!-- Посилання на ігри користувача -->
             <a th:href="@{/game-boot/user/games}">View Games</a>
         </div>
     </div>
 </div>
+<div class="modal fade" id="topUpModal" tabindex="-1" role="dialog" aria-labelledby="topUpModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="topUpModalLabel">Top Up Balance</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Форма для поповнення балансу -->
+                <form th:action="@{/game-boot/user/top-up}" th:method="POST">
+                    <div class="form-group">
+                        <label for="topUpAmount">Enter amount to top up:</label>
+                        <input type="number" class="form-control" id="topUpAmount" name="amount" placeholder="Amount" min="0" step="0.01" required>
+                    </div>
+                    <button type="submit" class="btn btn-success">Confirm</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
