--- a/src/main/resources/templates/userAccount.html
+++ b/src/main/resources/templates/userAccount.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-<div th:insert="~{navbar}"></div>
+<div th:insert="~{navbar::navbar}"></div>
 <div class="container">
     <!-- Верхній банер з юзернеймом користувача -->
     <div class="header">
@@ -99,165 +99,8 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script type="text/javascript" th:src="@{/js/search.js}" th:inline="javascript"></script>
 </body>
 
 </html>
-
-
-<!--<!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8">
-    <title>My account</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        /* Стилі для верхнього банера */
-        .header {
-            background-color: #d9edf7;
-            color: #31708f;
-            border-color: #d9edf7;
-            padding: 10px;
-            text-align: left;
-        }
-
-        /* Стилі для основного вмісту */
-        .content {
-            width: 50%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        /* Стилі для рядків з атрибутами користувача */
-        .user-info-row {
-            padding: 10px 0;
-            border-bottom: 1px solid #ccc; /* Горизонтальна лінія після рядка */
-            text-align: left;
-        }
-    </style>
-</head>
-
-<body>
-<div th:insert="~{navbar}"></div>
-<div class="container">
-    &lt;!&ndash; Верхній банер з юзернеймом користувача &ndash;&gt;
-    <div class="header">
-        <div th:text="${user.username}">Username</div>
-    </div>
-
-    &lt;!&ndash; Основний вміст зі списком атрибутів користувача &ndash;&gt;
-    <div class="content">
-        &lt;!&ndash; Електронна пошта користувача &ndash;&gt;
-        <div class="user-info-row">
-            <strong><i style="color: royalblue;" class="fa fa-envelope-o" aria-hidden="true"></i> Email:</strong> <span
-                th:text="${user.email}">example@example.com</span>
-        </div>
-
-        &lt;!&ndash; Баланс користувача &ndash;&gt;
-        <div class="user-info-row d-flex justify-content-between">
-            <span>
-                <strong><i style="color: forestgreen;" class="fa fa-money"
-                           aria-hidden="true"></i> Balance:</strong> <span id="balance"
-                                                                           th:text="${user.balance}">0.00</span>₴
-            </span>
-            &lt;!&ndash; Кнопка для поповнення балансу &ndash;&gt;
-            <button id="topUpButton" class="btn btn-success" data-toggle="modal" data-target="#topUpModal">Top Up
-            </button>
-        </div>
-
-        &lt;!&ndash; Роль користувача &ndash;&gt;
-        <div class="user-info-row">
-            <strong><i class="fa fa-user-o" aria-hidden="true"></i> Role:</strong> <span th:text="${user.role}">USER_ROLE</span>
-        </div>
-
-        &lt;!&ndash; Ігри користувача &ndash;&gt;
-        <div class="user-info-row">
-            <strong><i class="fa fa-gamepad" aria-hidden="true"></i> Games:</strong>
-            &lt;!&ndash; Посилання на ігри користувача &ndash;&gt;
-            <a th:href="@{/game-boot/user/games}">View Games</a>
-        </div>
-    </div>
-
-    &lt;!&ndash; Модальне вікно для поповнення балансу &ndash;&gt;
-    <div class="modal fade" id="topUpModal" tabindex="-1" role="dialog" aria-labelledby="topUpModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="topUpModalLabel">Top Up Balance</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    &lt;!&ndash; Форма для поповнення балансу &ndash;&gt;
-                    <form id="topUpForm">
-                        <div class="form-group">
-                            <label for="topUpAmount">Enter amount to top up:</label>
-                            <input type="number" class="form-control" id="topUpAmount" name="amount"
-                                   placeholder="Amount" min="0.01" step="0.01" required>
-                        </div>
-                        <button id="confirmTopUpButton" type="submit" class="btn btn-success">Confirm</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const topUpButton = document.getElementById("confirmTopUpButton");
-        const topUpForm = document.getElementById("topUpForm");
-
-
-
-        function blockTopUpButton() {
-            topUpButton.disabled = true;
-            setTimeout(unblockTopUpButton, 2000);
-        }
-
-        // Функція для розблокування кнопки після завершення процесу
-        function unblockTopUpButton() {
-            topUpButton.disabled = false;
-        }
-
-        // Додати обробник події для натискання кнопки
-        topUpButton.addEventListener("click", function () {
-            const amount = document.getElementById("topUpAmount").value;
-            let balance = document.getElementById('balance');
-            const request = {amount: amount};
-            const requestOptions = {
-                method: 'POST',
-                headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify(request)
-            };
-            fetch('http://localhost:8085/game-boot/user/top-up', requestOptions)
-                .then(resp => {
-                    console.log("Response Status:", resp.status); // Додано для перевірки коду статусу відповіді
-                    console.log("Response Headers:", resp.headers.get('content-type')); // Додано для перевірки типу контенту відповіді
-
-                    return resp.json();
-                })
-                .then(data => {
-                    console.log("Response Data:", data); // Додано для перевірки отриманих даних
-
-                    let balance = document.getElementById('balance');
-                    balance.innerText = data.balance; // Перевірте, чи `data` містить `balance`
-                })
-                .catch(error => {
-                    console.error('Error:', error); // Додано для обробки помилок
-                });
-        });
-    });
-</script>
-
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
-</html>-->
 
