--- a/src/main/resources/templates/viewUsersSearchResult.html
+++ b/src/main/resources/templates/viewUsersSearchResult.html
@@ -19,10 +19,10 @@
         <form th:action="@{/game-boot/admin/search}" th:method="GET" class="w-100">
             <div id="custom-search-input">
                 <div class="input-group">
-                    <!-- Розтягніть поле пошуку на всю ширину контейнера -->
-                    <input type="text" name="criteria" class="search-query form-control" placeholder="Search by username or email" />
+
+                    <input type="text"  th:value="${criteria}" name="criteria" class="search-query form-control" placeholder="Search by username or email" />
                     <div class="input-group-append">
-                        <!-- Зробіть іконку пошуку привабливого кольору -->
+
                         <button class="btn btn-primary" type="submit">
                             <i class="fa fa-search" aria-hidden="true"></i>
                         </button>
@@ -34,15 +34,15 @@
 </div>
 
 <div class="container">
-    <p>Total records: <span th:text="${userPage.totalElements}"></span></p>
+    <p>Search results: <span th:text="${userPage.totalElements}"></span></p>
 
     <table class="table">
         <thead>
         <tr>
-            <th th:sort="${'username'}"><a th:href="@{/game-boot/admin/view-users(sort=username)}">Username</a></th>
-            <th th:sort="${'email'}"><a th:href="@{/game-boot/admin/view-users(sort=email)}">Email</a></th>
-            <th th:sort="${'balance'}"><a th:href="@{/game-boot/admin/view-users(sort=balance)}">Balance</a></th>
-            <th th:sort="${'role'}"><a th:href="@{/game-boot/admin/view-users(sort=role)}">Role</a></th>
+            <th th:sort="${'username'}"><a th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=username)}">Username</a></th>
+            <th th:sort="${'email'}"><a th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=email)}">Email</a></th>
+            <th th:sort="${'balance'}"><a th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=balance)}">Balance</a></th>
+            <th th:sort="${'role'}"><a th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=role)}">Role</a></th>
             <th>Action</th>
         </tr>
         </thead>
