--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">-->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -63,7 +62,7 @@
 
 
                     <div style="margin-top:10px" class="form-group">
-                        <!-- Button -->
+
 
                         <div class="col-sm-12 controls">
                             <button id="btn-login" class="btn btn-success" type="submit">Login</button>
@@ -75,7 +74,7 @@
                         <div class="col-md-12 control">
                             <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
                                 Don't have an account?
-                                <a th:href="@{/game-boot/registration}" >  <!--onClick="$('#loginbox').hide(); $('#signupbox').show()"-->
+                                <a th:href="@{/game-boot/registration}" >
                                     Sign Up Here
                                 </a>
                             </div>
@@ -88,70 +87,5 @@
         </div>
     </div>
 </div>
-<!--
-<div id="signupbox" style="display:none; margin-top:50px"
-     class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-    <div class="panel panel-info">
-        <div class="panel-heading">
-            <div class="panel-title"><i class="fa fa-gamepad" aria-hidden="true"></i> GameBoot</div>
-            <div style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink"
-                                                                                       onclick="$('#signupbox').hide(); $('#loginbox').show()">Sign
-                In</a></div>
-        </div>
-        <div class="panel-body">
-            <form id="signupform" th:action="@{/game-boot/registration}" th:method="POST" class="form-horizontal"
-                  role="form" th:object="${request}" >
-
-                <div class="form-group">
-                    <label for="username" class="col-md-3 control-label">Username</label>
-                    <div class="col-md-9">
-                        <input type="text" th:field="*{username}" required="required" id="username" class="form-control" name="username" placeholder="username">
-                        <div style="color: red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="email" class="col-md-3 control-label">Email</label>
-                    <div class="col-md-9">
-                        <input type="text" th:field="*{email}" required="required" pattern="email" id="email" class="form-control" name="email" placeholder="Email Address">
-                        <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-                    </div>
-                </div>
-
-                &lt;!&ndash;<div class="form-group">
-                    <label for="password" class="col-md-3 control-label">Password</label>
-                    <div class="col-md-9">
-                        <input type="password" class="form-control" id="password" name="password"
-                               placeholder="Password">
-                    </div>
-                </div>&ndash;&gt;
-
-                <div class="form-group">
-                    <label for="password" class="col-md-3 control-label">Password</label>
-                    <div class="col-md-9">
-                        <input type="password" th:field="*{password}" required="required" class="form-control" name="password" id="password" placeholder="Password" data-toggle="popover" title="Password Strength" data-content="Enter Password...">
-                        <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-                    </div>
-                </div>
-
-
-                <div class="registration-message">
-                    <p><span class="exclamation-mark">&#9888;</span>To complete the registration, you will need to
-                        confirm your email. Wait for the message and follow the instructions in it.</p>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-offset-3 col-md-9">
-                        <button id="btn-signup" type="submit" class="btn btn-info"><i class="icon-hand-right"></i> &nbsp
-                            Sign Up
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
--->
-
 </body>
 </html>
