--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">-->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -45,31 +44,25 @@
                 <div class="form-group">
                     <label for="username" class="col-md-3 control-label">Username</label>
                     <div class="col-md-9">
-                        <input type="text" th:field="*{username}" required="required" id="username" class="form-control" name="username" placeholder="username">
+                        <input type="text" th:field="*{username}" id="username" class="form-control" name="username" placeholder="username">
                         <div style="color: red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+                        <div style="color: red;" th:if="${userNameAlreadyTaken == 1}"> This username already taken</div>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="email" class="col-md-3 control-label">Email</label>
                     <div class="col-md-9">
-                        <input type="text" th:field="*{email}" required="required" id="email" class="form-control" name="email" placeholder="Email Address">
+                        <input type="text" th:field="*{email}" id="email" class="form-control" name="email" placeholder="Email Address">
                         <div style="color: red" th:if="${#fields.hasErrors('email')}"  th:errors="*{email}"></div>
+                        <div style="color: red;" th:if="${emailAlreadyTaken == 1}"> This email already taken</div>
                     </div>
                 </div>
-
-              <!--  <div class="form-group">
-                <label for="password" class="col-md-3 control-label">Password</label>
-                <div class="col-md-9">
-                    <input type="password" class="form-control" id="password" name="password"
-                           placeholder="Password">
-                </div>
-            </div>-->
 
                 <div class="form-group">
                     <label for="password" class="col-md-3 control-label">Password</label>
                     <div class="col-md-9">
-                        <input type="password" th:field="*{password}" required="required" class="form-control" name="password" id="password" placeholder="Password" data-toggle="popover" title="Password Strength" data-content="Enter Password...">
+                        <input type="password" th:field="*{password}"  class="form-control" name="password" id="password" placeholder="Password" data-toggle="popover" title="Password Strength" data-content="Enter Password...">
                         <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
                     </div>
                 </div>
