--- a/src/main/resources/templates/viewGames.html
+++ b/src/main/resources/templates/viewGames.html
@@ -35,39 +35,48 @@
     <div class="container">
         <div style="float: right; display: flex; align-items: center;">
             <form th:action="@{/game-boot/admin/add-game}" th:method="GET">
-            <button class="btn btn-success ml-3" type="submit">
-                <i class="fa fa-plus" aria-hidden="true"></i> Add game
-            </button>
+                <button class="btn btn-success ml-3" type="submit">
+                    <i class="fa fa-plus" aria-hidden="true"></i> Add game
+                </button>
             </form>
         </div>
     </div>
-    <table class="table">
-        <thead>
-        <tr>
-            <th>
-                <a th:href="@{/game-boot/admin/manage-games(sort=name,page=${gamePage.pageable.pageNumber})}" th:text="'Name'"></a>
-            </th>
-            <th>
-                <a th:href="@{/game-boot/admin/manage-games(sort=gameDetail.price,page=${gamePage.pageable.pageNumber})}" th:text="'Price'"></a>
-            </th>
-            <th>
-                <a th:href="@{/game-boot/admin/manage-games(sort=gameDetail.count,page=${gamePage.pageable.pageNumber})}" th:text="'Count'"></a>
-            </th>
-            <th>
-                <a th:href="@{/game-boot/admin/manage-games(sort=gameDetail.yearOfProduction,page=${gamePage.pageable.pageNumber})}" th:text="'Year of production'"></a>
-            </th>
-            <th>Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="game : ${gamePage.content}">
-            <td th:text="${game.name}"></td>
-            <td th:text="${game.gameDetail.price}"></td>
-            <td th:text="${game.gameDetail.count}"></td>
-            <td th:text="${game.gameDetail.yearOfProduction}"></td>
-        </tr>
-        </tbody>
-    </table>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>
+                    <a th:href="@{/game-boot/admin/manage-games(sort=name,page=${gamePage.pageable.pageNumber})}" th:text="'Name'"></a>
+                </th>
+                <th>
+                    <a th:href="@{/game-boot/admin/manage-games(sort=gameDetail.price,page=${gamePage.pageable.pageNumber})}" th:text="'Price'"></a>
+                </th>
+                <th>
+                    <a th:href="@{/game-boot/admin/manage-games(sort=gameDetail.count,page=${gamePage.pageable.pageNumber})}" th:text="'Count'"></a>
+                </th>
+                <th>
+                    <a th:href="@{/game-boot/admin/manage-games(sort=gameDetail.yearOfProduction,page=${gamePage.pageable.pageNumber})}" th:text="'Year of production'"></a>
+                </th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="game : ${gamePage.content}">
+                <td th:text="${game.name}"></td>
+                <td th:text="${game.gameDetail.price}"></td>
+                <td th:text="${game.gameDetail.count}"></td>
+                <td th:text="${game.gameDetail.yearOfProduction}"></td>
+                <td>
+                    <form th:action="@{/game-boot/admin/edit-game}" method="GET">
+                        <input type="hidden" th:value="${game.gameId}" name="gameId">
+                        <button type="submit" class="btn btn-link">
+                            <i class="fa fa-pencil" aria-hidden="true"></i> Edit
+                        </button>
+                    </form>
+
+                </td>
+            </tr>
+            </tbody>
+        </table>
 
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
